# grrs

./: Cargo.toml  README.md  flake.nix  test.txt
src/: config.rs  lib.rs  main.rs
src/tests/: cli.rs
