[package]
name = "grrs"
version = "0.1.0"
edition = "2021"
authors = ["Rohit <rohitmandavkar3577@gmail.com>"]
license = "MIT"
description = "A tool to search files"
readme = "README.md"
homepage = "https://github.com/Rohit-48/grrs"
repository = "https://github.com/Rohit-48/grrs"
keywords = ["cli", "search", "demo"]
categories = ["command-line-utilities"]


[dependencies]
clap = { version = "=4.5.49", features = ["derive"] }
anyhow = "1.0.101"
indicatif = "0.18.4"
log = "0.4.29"
crossbeam-channel = "0.5.15"
ctrlc = "3.5.2"
serde = { version = "1.0.228", features = ["derive"] }
signal-hook = "0.4.3"
time = "0.3.47"


[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
assert_fs = "1.1.1"
